Figure and paper file updates

--- a/validation/oddpub_validation.html
+++ b/validation/oddpub_validation.html
@@ -172,6 +172,8 @@ pre code {
 <h1>SocArXiv</h1>
 <div id="section" class="section level2">
 <h2>2019</h2>
+<div id="data" class="section level3">
+<h3>Data</h3>
 <p>Under “attributes.has_data_links”, “available” means data link exists, everything else means data link does not exist. NA appears to be the same as “not_applicable”, meaning no data link and no justification (i.e. “attributes.why_no_data” is also NA). “no” means data was used but is not available. Justification should be provided in “attributes.why_no_data”.</p>
 <p>Since ODDPub does not check for areas where open data is not applicable, we should go by 0/1 according to attributes.data_links being populated (i.e. “data_link_available” as defined above).</p>
 <p>We assume the attributes.data_links to be the “Gold Standard”, i.e. indicating the true availability of data. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and this some of the “false positive” may in fact be true positives.</p>
@@ -187,8 +189,13 @@ pre code {
 ## 2 Sensitivity 0.524
 ## 3 Specificity 0.939</code></pre>
 </div>
+<div id="code" class="section level3">
+<h3>Code</h3>
+</div>
+</div>
 <div id="section-1" class="section level2">
 <h2>2020/2021</h2>
+<p>Code was not manually verified for COVID-19 related papers.</p>
 <pre><code>## # A tibble: 2 × 3
 ##   Predicted             `Data linked` `No data linked`
 ##   &lt;chr&gt;                         &lt;int&gt;            &lt;int&gt;
