Final review paper updates - added appendices, arxiv and socarxiv validation data

--- a/validation/oddpub_validation.html
+++ b/validation/oddpub_validation.html
@@ -174,20 +174,52 @@ pre code {
 <h2>2019</h2>
 <div id="data" class="section level3">
 <h3>Data</h3>
-<p>Under “attributes.has_data_links”, “available” means data link exists, everything else means data link does not exist. NA appears to be the same as “not_applicable”, meaning no data link and no justification (i.e. “attributes.why_no_data” is also NA). “no” means data was used but is not available. Justification should be provided in “attributes.why_no_data”.</p>
-<p>Since ODDPub does not check for areas where open data is not applicable, we should go by 0/1 according to attributes.data_links being populated (i.e. “data_link_available” as defined above).</p>
-<p>We assume the attributes.data_links to be the “Gold Standard”, i.e. indicating the true availability of data. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and this some of the “false positive” may in fact be true positives.</p>
-<pre><code>## # A tibble: 2 × 3
-##   Predicted             `Data linked` `No data linked`
-##   &lt;chr&gt;                         &lt;int&gt;            &lt;int&gt;
-## 1 Open data detected               11               72
-## 2 No open data detected            10             1107</code></pre>
-<pre><code>## # A tibble: 3 × 2
-##   Metric      Value
-##   &lt;chr&gt;       &lt;dbl&gt;
-## 1 Accuracy    0.932
-## 2 Sensitivity 0.524
-## 3 Specificity 0.939</code></pre>
+<p>SocArXiv allows authors to input a link to their data source/repository upon submission of a pre-print (DOUBLE CHECK). This link can then be accessed via the API metadata. The presence of a data link was used as an indicator that a pre-print provides open data for the purposes of validating the ODDPub algorithm. When available, a data link is stored under the variable name “attributes.data_links”. The data was manipulated using functions from the R package tidyverse <span class="citation">[@tidyverse]</span> to create a binary variable indicating data availability or lack thereof. We assume “attributes.data_links” to indicate the true availability of data for the purposes of validating the ODDPub algorithm. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and thus some of the false positive may in fact be true positives. This was not verified directly in order to allow us to more easily consider the whole sample in our validation.</p>
+<p>Against the data availability indicated by pre-print authors in our 2019 sample, the ODDPub algorithm performed with an accuracy of 93 percent, a sensitivity of 52 percent, and a specificity of 94 percent. In our 2020 and 2021 sample, the algorithm performed with an accuracy of 79 percent, a sensitivity of 29 percent, and a specificity of 92 percent.</p>
+<p>It is unclear the precise inclusion criteria for data submitted to the data link field. It is possible that some of the links provided lead to data sets that are publicly available for reuse, which would not constitute “open data” by the ODDPub algorithm’s definition, in which case the accuracy could potentially be higher in reality than 93 percent and 79 percent in the samples considered.</p>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Predicted</th>
+<th align="right">Data linked</th>
+<th align="right">No data linked</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Open data detected</td>
+<td align="right">11</td>
+<td align="right">72</td>
+</tr>
+<tr class="even">
+<td align="left">No open data detected</td>
+<td align="right">10</td>
+<td align="right">1107</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Metric</th>
+<th align="right">Value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Accuracy</td>
+<td align="right">0.93</td>
+</tr>
+<tr class="even">
+<td align="left">Sensitivity</td>
+<td align="right">0.52</td>
+</tr>
+<tr class="odd">
+<td align="left">Specificity</td>
+<td align="right">0.94</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="code" class="section level3">
 <h3>Code</h3>
@@ -201,12 +233,28 @@ pre code {
 ##   &lt;chr&gt;                         &lt;int&gt;            &lt;int&gt;
 ## 1 Open data detected               28               31
 ## 2 No open data detected            69              350</code></pre>
-<pre><code>## # A tibble: 3 × 2
-##   Metric      Value
-##   &lt;chr&gt;       &lt;dbl&gt;
-## 1 Accuracy    0.791
-## 2 Sensitivity 0.289
-## 3 Specificity 0.919</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Metric</th>
+<th align="right">Value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Accuracy</td>
+<td align="right">0.79</td>
+</tr>
+<tr class="even">
+<td align="left">Sensitivity</td>
+<td align="right">0.29</td>
+</tr>
+<tr class="odd">
+<td align="left">Specificity</td>
+<td align="right">0.92</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div id="arxiv" class="section level1">
